# sysopy

./: .gitignore  CMakeLists.txt  lab3results.odt
lab1/: Makefile  list_funs.c  main.c
lab1/src/: list_funs.c  list_funs.h  list_structs.h  main.c  main.h  main_dynamic.c  main_dynamic.h  utils.c  utils.h
lab1/zad1/: Makefile
lab1/zad1/src/: list_funs.c  list_structs.c  list_structs.h  utils.h
lab1/zad2/src/: list_funs.h  main.c  main.h  main_dynamic.c  main_dynamic.h
lab10/: Makefile
lab10/zad1/src/: client.c  client.h  common.h  server.c  server.c.bckp  server.h
lab10/zad2/src/: client.c  client.h
lab2/: Makefile
lab2/run/: bubble_sorter
lab2/src/: bubble_sorter.c  bubble_sorter.h  main_1.h  omg.b  records_generator.c  records_generator.h
lab2/zad1/: results.txt
lab2/zad1/src/: bubble_sort.c  bubble_sorter.c  records_generator.c
lab2/zad2/: file_tree_crawler.c  main  main_ftw
lab2/zad2/src/: file_tree_crawler.c  file_tree_crawler_ftw.c  file_tree_crawler_ftw.h
lab2/zad3/: Makefile  dupa.txt  file_lock  file_lock.c
lab3/src/: main_1.c
lab3/zad1/: Makefile
lab3/zad1/output/: fork.csv  vfork.csv
lab3/zad1/src/: main.c
lab3/zad2/src/: file_counter.h
lab4/zad1/: 1  singals.c  singals.h
lab4/zad1/src/: child.c  parent.c  parent.h  singals.h
lab4/zad2/: Makefile
lab4/zad2/src/: child.c  (+2 more)
lab5/zad1/: Makefile
lab5/zad2/: Makefile
lab5/zad3/: Makefile  folders.txt
lab6/zad1/: Makefile
lab6/zad2/: Makefile
lab7/zad1/: Makefile
lab7/zad2/: Makefile
lab8/zad1c/: out
plots/: fork_clone.csv  plot.plt  vfork_clone.csv
(+90 files in other folders)
